--- a/main.tex
+++ b/main.tex
@@ -17,8 +17,15 @@ As new mutational signatures continue to be discovered, observation of the level
 \end{abstract}
 
 \section{Introduction}
-Slight modifications to data sources used in past studies of mutations and mutation signatures, such as expansion to more cancer types, have the potential to solidify or weaken conclusions made based on limited data.
-Web-based interactive visualizations allow for comparison across data sets and features.
-Users can choose sequencing project data sets, mutation signature combinations (of which can be selected based on cancer-type-specific presets), and plot types. 
+Slight modifications to data sources used in past studies of mutations and mutation signatures have the potential to solidify or weaken conclusions made based on limited data.
+For example, one might be interested in reproducing a past study across additional cancer types or in the context of additional variables, such as smoking status or age.
+Web-based interactive visualizations allow for this type of comparison to be done across data sets and features in a way that is accessible and fast.
+This semester, I have focused on building a visualization tool to do just this, using whole-genome somatic mutation datasets and mutation signature definitions from various sources.
+
+The resulting tool, X (http://link.to/it), is a web-based mutation data browser that enables exploration of mutation signatures, cancer types, mutation types, and kataegis events.
+X allows users to choose sequencing project data sets by cancer type, as well as mutation signature combinations (of which can be selected based on cancer-type-specific presets) before plotting this data. 
+Using the data-driven documents JavaScript library (D3.js), plots can be customized down to the pixel.
+Showing donor clinical variables, such as smoking and alcohol usage, and their relationship to mutation signatures, requires this fine control that D3 provides.
+In addition, D3 contains APIs for easy implementation of custom interactive features, such as highlighting based on mouse position and zooming based on mouse dragging ("brushing"). 
 
 \end{document}
