--- a/main.bib
+++ b/main.bib
@@ -1,13 +1,3 @@
-@article{chelaru2014epiviz,
-  title={Epiviz: interactive visual analytics for functional genomics data},
-  author={Chelaru, Florin and Smith, Llewellyn and Goldstein, Naomi and Bravo, H{\'e}ctor Corrada},
-  journal={Nature methods},
-  volume={11},
-  number={9},
-  pages={938},
-  year={2014},
-  publisher={Nature Publishing Group}
-}
 @article{leiserson2015magi,
   title={MAGI: visualization and collaborative annotation of genomic aberrations},
   author={Leiserson, Mark DM and Gramazio, Connor C and Hu, Jason and Wu, Hsin-Ta and Laidlaw, David H and Raphael, Benjamin J},
@@ -16,6 +6,16 @@
   number={6},
   pages={483},
   year={2015},
+  publisher={Nature Publishing Group}
+}
+@article{chelaru2014epiviz,
+  title={Epiviz: interactive visual analytics for functional genomics data},
+  author={Chelaru, Florin and Smith, Llewellyn and Goldstein, Naomi and Bravo, H{\'e}ctor Corrada},
+  journal={Nature methods},
+  volume={11},
+  number={9},
+  pages={938},
+  year={2014},
   publisher={Nature Publishing Group}
 }
 @article{taylor2013dna,
@@ -55,4 +55,14 @@
   pages={618--622},
   year={2016},
   publisher={American Association for the Advancement of Science}
+}
+@article{bostock2011d3,
+  title={D$^3$ data-driven documents},
+  author={Bostock, Michael and Ogievetsky, Vadim and Heer, Jeffrey},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={17},
+  number={12},
+  pages={2301--2309},
+  year={2011},
+  publisher={IEEE}
 }
