Started case study

--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,10 @@ Showing donor clinical variables, such as smoking and alcohol usage, and their r
 In addition, D3 contains APIs for easy implementation of custom interactive features, such as highlighting based on mouse position and zooming based on mouse dragging (``brushing"). 
 
 \section{Case Study}
+This tool brings the power to visually analyze relationships between signature exposures and clinical variables.
+Interactive sorting and dynamic calculations of signature exposures allow trends to be observed quickly.
+Connections generally assumed to exist can be verified and examined, such as specific signatures being associated with tobacco usage.
+Local datasets can be visualized, allowing functionality to extend beyond the public datasets we have processed.
 
 \section{Methods}
 
