--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,10 @@ Connections generally assumed to exist can be verified and examined, such as spe
 Local datasets can be visualized, allowing functionality to extend beyond the public datasets we have processed.
 
 \section{Methods}
+This tool has been developed with maintainability and modularity in mind.
+Using the Vue JavaScript framework, the application is made up of reusable components that encapsulate templates, functions, and variables.
+Component state can be linked to events or ``watchers'' that observe and process data automatically upon change.
+
 
 \bibliography{main}{}
 \bibliographystyle{plain}
