Including plot SVGs

--- a/main.bib
+++ b/main.bib
@@ -66,3 +66,33 @@
   year={2011},
   publisher={IEEE}
 }
+@article{kim2016somatic,
+  title={Somatic ERCC2 mutations are associated with a distinct genomic signature in urothelial tumors},
+  author={Kim, Jaegil and Mouw, Kent W and Polak, Paz and Braunstein, Lior Z and Kamburov, Atanas and Tiao, Grace and Kwiatkowski, David J and Rosenberg, Jonathan E and Van Allen, Eliezer M and D D'Andrea, Alan and others},
+  journal={Nature genetics},
+  volume={48},
+  number={6},
+  pages={600},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+@article{yousif2018origins,
+  title={The Origins and Consequences of Localized and Global Somatic Hypermutation},
+  author={Yousif, Fouad and Prokopec, Stephenie and Sun, Ren X and Fan, Fan and Lalansingh, Christopher M and Park, David H and Szyca, Lesia and Network, PCAWG and Boutros, Paul C},
+  journal={bioRxiv},
+  pages={287839},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory}
+}
+@article{nik2012mutational,
+  title={Mutational processes molding the genomes of 21 breast cancers},
+  author={Nik-Zainal, Serena and Alexandrov, Ludmil B and Wedge, David C and Van Loo, Peter and Greenman, Christopher D and Raine, Keiran and Jones, David and Hinton, Jonathan and Marshall, John and Stebbings, Lucy A and others},
+  journal={Cell},
+  volume={149},
+  number={5},
+  pages={979--993},
+  year={2012},
+  publisher={Elsevier}
+}
+
+
