Discussion of Manhattan plot, data processing

--- a/main.bib
+++ b/main.bib
@@ -94,5 +94,13 @@
   year={2012},
   publisher={Elsevier}
 }
-
-
+@article{huang2017detecting,
+  title={Detecting presence of mutational signatures in cancer with confidence},
+  author={Huang, Xiaoqing and Wojtowicz, Damian and Przytycka, Teresa M},
+  journal={Bioinformatics},
+  volume={34},
+  number={2},
+  pages={330--337},
+  year={2017},
+  publisher={Oxford University Press}
+}
