--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@ The following are types of plots that can be generated:
 
 
 \section{Case Study}
-A potential use case for this tool is the analysis of relationships between signature exposures and clinical variables.
+One use case for this tool is the analysis of relationships between signature exposures and clinical variables.
 Interactive sorting and dynamic calculations of signature exposures allow trends to be observed quickly.
 Connections generally assumed to exist can be verified and examined, such as specific signatures being associated with tobacco usage.
 
