Updates to case study

--- a/main.tex
+++ b/main.tex
@@ -63,15 +63,21 @@ The following are types of plots that can be generated:
 
 
 \section{Case Study}
+
+\subsection{Tobacco Usage and Mutational Signatures}
 One use case for this tool is the analysis of relationships between signature exposures and clinical variables.
 Interactive sorting and dynamic calculations of signature exposures allow trends to be observed quickly.
 Connections generally assumed to exist can be verified and examined, such as specific signatures being associated with tobacco usage.
 
-\subsection{Tobacco Usage and Mutational Signatures}
 Alexandrov \textit{et al}. 2016 finds that smokers exhibit increases in mutations attributed to COSMIC signatures 2, 4, 5, 13, and 16 \cite{alexandrov2016mutational}. 
 Signature 4 in particular ...
 
-\subsection{Tobacco Usage and Hypermutation}
+\subsection{Hypermutation and Mutation Category}
+Another use case is the analysis of the relationship between hypermutation and mutation category.
+For SNVs, the mutation category is the left flanking base pair, the mutation reference base pair, the variant base pair, and the right flanking base pair.
+These categories are assigned colors on rainfall plots to allow this type of relationship (or lack thereof) to be quickly spotted.
+
+When looking at the kataegis plot on chromosome 1 for the PCAWG-PRAD-UK (Prostate Adenocarcinoma) cohort...
 
 % TODO: Mention sharing with URL
 
