Elaboration of plot types, future directions, modified introduction

--- a/main.bib
+++ b/main.bib
@@ -104,3 +104,21 @@
   year={2017},
   publisher={Oxford University Press}
 }
+@article{rubanova2018tracksig,
+  title={TrackSig: reconstructing evolutionary trajectories of mutation signature exposure},
+  author={Rubanova, Yulia and Shi, Ruian and Li, Roujia and Wintersinger, Jeff and Sahin, Nil and Deshwar, Amit and Morris, Quaid and PCAWG-11 working group and others},
+  journal={bioRxiv},
+  pages={260471},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory}
+}
+@article{gibson2010hints,
+  title={Hints of hidden heritability in GWAS},
+  author={Gibson, Greg},
+  journal={Nature genetics},
+  volume={42},
+  number={7},
+  pages={558},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
