--- a/main.tex
+++ b/main.tex
@@ -5,8 +5,10 @@
 \usepackage{graphicx}
 \usepackage{xcolor}
 
-\title{CMSC499A: Mutation Visualization}
-\author{Mark Keller \thanks{mentored by Professor Max Leiserson}}
+\usepackage{hyperref}
+
+\title{CMSC499A: Mutation Signature Explorer}
+\author{Mark Keller \thanks{advised by Professor Max Leiserson}}
 \date{Spring 2018}
 
 \begin{document}
@@ -22,36 +24,40 @@ This paper describes a mutation visualization tool developed this semester that 
 \end{abstract}
 
 \section{Introduction}
-Slight modifications to data sources used in past studies of mutations and mutation signatures have the potential to solidify or weaken conclusions made based on limited data.
-For example, one might be interested in reproducing a past study across additional cancer types or in the context of additional variables, such as smoking status or age.
-Web-based interactive visualizations allow for this type of comparison to be done across datasets and features in a way that is accessible and fast.
-This semester, I have focused on building a visualization tool to do just this, using whole-genome simple somatic mutation datasets, donor clinical datasets, and mutation signature definitions from various sources.
+Mutation Signature Explorer is a web-based (\url{https://mutation-signature-explorer.lrgr.io}) mutation data browser that enables exploration of mutational signatures, single-nucleotide variant (SNV) mutation types, and mutation density.
+This tool allows users to choose sequencing project datasets by cancer type, as well as mutational signature combinations (of which can be selected based on cancer-type-specific presets) before plotting this data. 
+Web-based interactive visualizations allow for exploration across datasets and features in a way that is accessible and fast.
+Data exploration through these visualizations can be used to make initial inferences that lead to further statistical analysis, or, alternatively, can be used to strengthen and verify relationships found through prior analysis.
 
-The resulting tool, located at https://link.lrgr.io, is a web-based mutation data browser that enables exploration of mutational signatures, single-nucleotide variant (SNV) mutation types, and mutation density.
-It allows users to choose sequencing project datasets by cancer type, as well as mutational signature combinations (of which can be selected based on cancer-type-specific presets) before plotting this data. 
-The following are types of plots that can be generated:
+Each type of visualization produced by the Mutation Signature Explorer aims to enable further examination of a trend or relationship which has been hypothesized or presented in existing literature.
+The following are types of visualizations that can be generated and their motivations:
 \begin{enumerate}
 \item To illustrate estimated contributions of a selected combination of mutational signatures, a stacked bar plot can be generated, showing estimated signature exposures for a sample, along with tobacco and alcohol usage indicators.
-    Exposure values can be normalized to sum to one for each sample, or kept relative to the total number of mutations in each sample.
-    This plot type was inspired by Figure 4 in Kim \textit{et al.} 2016 that displays estimated contributions of 4 different signatures and tobacco usage over cohorts of urothelial cancer tumor samples \cite{kim2016somatic}.
+Exposure values can be normalized to sum to one for each sample, or kept relative to the total number of mutations in each sample.
+This plot type was inspired by Figure 4 in Kim \textit{et al.} 2016 that displays estimated contributions of 4 different signatures and tobacco usage over cohorts of urothelial cancer tumor samples \cite{kim2016somatic}.
     
-\item To identify samples containing instances of localized hypermutation, called kataegis, this second type of plot highlights kataegis events along the genome.
-    Along the vertical axis are samples, and along the horizontal axis is the genome.
-    Users can zoom and pan along each chromosome, and easily pinpoint kataegis events by the dark bars located on mutations in kataegis regions.
-    Samples are grouped by sequencing project and cancer type.
-    This plot doubles as a rainfall plot selector, as each sample bar can be clicked to generate a corresponding rainfall plot.
-    To our knowledge, this style of plot has not been used before to visualize kataegis events.
+\item Localized hypermutation, known as kataegis, was first discussed by Taylor \textit{et al}. 2013\cite{taylor2013dna}, in which whole-genome sequencing of breast cancers showed regions with mutation ``rainfalls" - greater than 5 mutations with significantly short intermutational distances. Mutations in regions of kataegis have been shown to occur frequently at C base pairs preceded by a 5-prime T base pair, due to APOBEC activity during double-strand break repair\cite{taylor2013dna}. Since this introduction in 2013, kataegis has been shown to occur in additional tumor types\cite{alexandrov2013signatures}. COSMIC signatures 2 and 13 have been associated with APOBEC activity, and by extension, kataegis\cite{alexandrov2013signatures}. There is recent interest in rigorous statistical identification and verification of kataegis\cite{yousif2018origins}.
+
+To examine mutation clusters, specifically those occurring in regions of kataegis, a rainfall plot can be generated for each sample.
+Mutations are plotted horizontally based on their genome location, and vertically by the distance (in bp) to the previous mutation.
+Mutations are colored according to one of 96 mutation categories (5' flanking base pair, single-nucleotide variant, 3' flanking base pair).
+Rainfall plots are commonly used to examine regions of hypermutation, as they allow these regions to be easily identified by tight vertical clusters of mutations. 
+Similar rainfall plots can be seen in Figure 4 of Nik-Zainal \textit{et al.} 2012\cite{nik2012mutational} and in Figure 6 of Alexandrov \textit{et al}. 2013\cite{alexandrov2013signatures}.
+
+To identify samples containing instances of localized hypermutation kataegic events can be highlighted along the genome in a second type of plot.
+Along the vertical axis are samples, and along the horizontal axis is the genome.
+Users can zoom and pan along each chromosome, and easily pinpoint kataegis events by the dark bars located on mutations in kataegis regions.
+Samples are grouped by sequencing project and cancer type.
+This plot acts as a rainfall plot selector, as each sample bar can be clicked to generate a corresponding rainfall plot.
+To our knowledge, this style of plot has not been used before to visualize kataegis .
     
-\item To examine mutation clusters, specifically those occurring in kataegis regions, a rainfall plot can be generated for each sample.
-    Mutations are plotted horizontally based on their genome location, and vertically by the distance (in bp) to the previous mutation.
-    Rainfall plots are commonly used to examine regions of hypermutation, as they allow these regions to be easily identified by vertical ``thunderbolts" of mutations. 
-    This terminology is related to the name ``kataegis", which is derived from the Greek word for ``thunder".
-    Similar rainfall plots can be seen in Figure 4 of Nik-Zainal \textit{et al.} 2012\cite{nik2012mutational}.
-    
-\item Mutation signature activity across the genome can be explored with a manhattan plot that assigns signatures to individual mutations and groups mutations into bins by chromosome location and signature.
-    A signature is assigned to each mutation category (left flanking base pair, single-nucleotide variant, right flanking base pair) for each sample by first computing estimated signature exposures for a sample, then taking the maximum of the product of each signature's probability for the mutation category and the sample's exposure to the same signature.
-    These assignments are used to group mutations into bins representing the number of mutations for each signature and genomic region.
-    To our knowledge, this is a new method and plot type for exploring signature exposures along the genome.
+\item A question that initially spurred the development of this visualization tool is whether certain mutational signatures are associated with mutations in specific genomic locations or regions.
+One way to examine this is to look at mutation signature activity across the genome with a ``Manhattan plot".
+The Manhattan plot gets its name from the resemblance of a skyline along the genome, and is typically used to visualize genome-wide association studies\cite{gibson2010hints}.
+To generate this plot, signatures are assigned to individual mutations and then grouped into bins by chromosome location and signature.
+A signature is assigned to each mutation category (5' flanking base pair, single-nucleotide variant, 3' flanking base pair) for each sample by first computing estimated signature exposures for a sample, then taking the maximum of the product of each signature's probability for the mutation category and the sample's exposure to the same signature.
+The horizontal axis represents the genome location, and the vertical axis represents the number of mutations within a bin.
+To our knowledge, this is a new method for exploring mutational signatures along the genome.
 
 \end{enumerate}
 
@@ -83,23 +89,19 @@ When looking at the kataegis plot on chromosome 1 for the PCAWG-PRAD-UK (Prostat
 
 
 \section{Methods}
+Using the Vue JavaScript framework, the application is made up of reusable components that encapsulate templates, functions, and variables.
+This encapsulation promotes modularity, and therefore ease of maintainability.
 Using the data-driven documents JavaScript library (D3.js)\cite{bostock2011d3}, each type of plot is tailored to suit the data types and data sets presented.
 Showing donor clinical variables, such as smoking and alcohol usage, and their relationship to mutation signatures, requires this fine control that D3 provides.
 In addition, D3 contains APIs for easy implementation of custom interactive features, such as highlighting, panning, and zooming.
-Interactivity extends beyond single plots, linking plots together based on variables such as chromosome region and donor ID.
+Interactivity extends beyond single plots, linking plots together based on variables such as chromosome region and donor.
 
-% TODO: Further discussion of plot linking 
-
-This tool has been developed with maintainability and modularity in mind.
-Using the Vue JavaScript framework, the application is made up of reusable components that encapsulate templates, functions, and variables.
-Component state can be linked to events or ``watchers'' that observe and process data automatically upon change.
-This functionality allows data to be bound to page elements or inputs easily.
-
-Data processing occurs in two stages. 
+Data processing for plots occurs in two stages. 
 Simple somatic mutation datasets and donor clinical datasets from sequencing projects are downloaded and processed into a uniform format. 
 This conversion must be specified for each sequencing project, as each provides datasets in a different format.
-Once into a uniform format, these datasets can be processed dynamically by a web server as specific requests are made for visualizations.
-This dynamic processing is performed by a web application written in Python with the Flask framework. 
+Once into a uniform format, these datasets are stored in a bucket in the UMIACS object store, and can be processed dynamically by a web server as specific requests are made for visualizations.
+Usage of the object store allows future developers to quickly get the application up and running without needing to perform this initial time-consuming data processing step.
+Dynamic processing is performed by a web application written in Python with the Flask framework. 
 The Pandas and NumPy packages are used for data manipulation in both of these processing stages.
 
 Signature exposures are estimated using a quadratic programming approach detailed by Huang \textit{et al}. 2017\cite{huang2017detecting}.
@@ -112,8 +114,24 @@ An instance of the front end (Vue/D3) component is deployed through GitHub pages
 This makes access and usage as simple as connecting via a web browser.
 
 \section{Future Directions}
-% TODO
-%Local datasets can be visualized, allowing functionality to extend beyond the public datasets we have processed.
+Future development of the Mutation Signature Explorer should include the expansion of functionality through implementation of more plot types.
+Specifically, visualization of mutational signatures themselves - as distributions over mutation categories - would be a simple but informative feature to add.
+This would give users that are unfamiliar with mutational signatures a better sense of how the signatures are used in the other plot types.
+These could look like interactive versions of the plots presented in Figure 2 of Alexandrov \textit{et al}. 2013\cite{alexandrov2013signatures}.
+
+Visualization of mutation rates, in the form of interactive mutational prevalence plots, could be used to show relationships between mutation rates and variables such as cancer type, clinical data, mutational signatures, and kataegis rates.
+A mutation prevalence plot by cancer type is presented in Figure 1 of Alexandrov \textit{et al}. 2013\cite{alexandrov2013signatures}.
+
+Another Manhattan plot could be implemented, showing mutation rates along the genome by mutation category.
+A plot showing the location of genes could be linked to existing plots that present data along the genome.
+This type of plot showing gene locations can be found in Figure 1 of Chelaru \textit{et al}. 2014\cite{chelaru2014epiviz}.
+
+Existing plots should be modified to allow analysis of mutation types other than SNVs. 
+For example, since kataegis has been hypothesized to be associated with rearrangements, the rainfall and kataegis plots should be modified to show structural somatic mutations.
+
+Mutation datasets from additional sources should be processed to allow for stronger conclusions to be made using this tool.
+When additional mutational signatures are discovered, they should be added to the database to ensure that users have access to the most relevant and accurate visualizations possible.
+Local dataset visualization should be further enabled, to extend functionality beyond the public datasets we have processed.
 
 
 \bibliography{main}{}
