Updated plot 1 motivations

--- a/main.bib
+++ b/main.bib
@@ -122,3 +122,23 @@
   year={2010},
   publisher={Nature Publishing Group}
 }
+@article{doll1956lung,
+  title={Lung cancer and other causes of death in relation to smoking},
+  author={Doll, Richard and Hill, A Bradford},
+  journal={British medical journal},
+  volume={2},
+  number={5001},
+  pages={1071},
+  year={1956},
+  publisher={BMJ Publishing Group}
+}
+@article{collaborative2002alcohol,
+  title={Alcohol, tobacco and breast cancer--collaborative reanalysis of individual data from 53 epidemiological studies, including 58 515 women with breast cancer and 95 067 women without the disease},
+  author={Collaborative Group on Hormonal Factors in Breast Cancer and others},
+  journal={British journal of cancer},
+  volume={87},
+  number={11},
+  pages={1234},
+  year={2002},
+  publisher={Nature Publishing Group}
+}
