Capitals in bib file

--- a/main.bib
+++ b/main.bib
@@ -1,5 +1,5 @@
 @article{leiserson2015magi,
-  title={MAGI: visualization and collaborative annotation of genomic aberrations},
+  title={{MAGI}: visualization and collaborative annotation of genomic aberrations},
   author={Leiserson, Mark DM and Gramazio, Connor C and Hu, Jason and Wu, Hsin-Ta and Laidlaw, David H and Raphael, Benjamin J},
   journal={Nature methods},
   volume={12},
@@ -19,7 +19,7 @@
   publisher={Nature Publishing Group}
 }
 @article{taylor2013dna,
-  title={DNA deaminases induce break-associated mutation showers with implication of APOBEC3B and 3A in breast cancer kataegis},
+  title={{{DNA} deaminases induce break-associated mutation showers with implication of {APOBEC3B} and {3A} in breast cancer kataegis},
   author={Taylor, Benjamin JM and Nik-Zainal, Serena and Wu, Yee Ling and Stebbings, Lucy A and Raine, Keiran and Campbell, Peter J and Rada, Cristina and Stratton, Michael R and Neuberger, Michael S},
   journal={Elife},
   volume={2},
@@ -67,7 +67,7 @@
   publisher={IEEE}
 }
 @article{kim2016somatic,
-  title={Somatic ERCC2 mutations are associated with a distinct genomic signature in urothelial tumors},
+  title={Somatic {ERCC2} mutations are associated with a distinct genomic signature in urothelial tumors},
   author={Kim, Jaegil and Mouw, Kent W and Polak, Paz and Braunstein, Lior Z and Kamburov, Atanas and Tiao, Grace and Kwiatkowski, David J and Rosenberg, Jonathan E and Van Allen, Eliezer M and D D'Andrea, Alan and others},
   journal={Nature genetics},
   volume={48},
@@ -105,7 +105,7 @@
   publisher={Oxford University Press}
 }
 @article{rubanova2018tracksig,
-  title={TrackSig: reconstructing evolutionary trajectories of mutation signature exposure},
+  title={{TrackSig}: reconstructing evolutionary trajectories of mutation signature exposure},
   author={Rubanova, Yulia and Shi, Ruian and Li, Roujia and Wintersinger, Jeff and Sahin, Nil and Deshwar, Amit and Morris, Quaid and PCAWG-11 working group and others},
   journal={bioRxiv},
   pages={260471},
@@ -113,7 +113,7 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 @article{gibson2010hints,
-  title={Hints of hidden heritability in GWAS},
+  title={Hints of hidden heritability in {GWAS}},
   author={Gibson, Greg},
   journal={Nature genetics},
   volume={42},
