--- a/main.bib
+++ b/main.bib
@@ -19,7 +19,7 @@
   publisher={Nature Publishing Group}
 }
 @article{taylor2013dna,
-  title={{{DNA} deaminases induce break-associated mutation showers with implication of {APOBEC3B} and {3A} in breast cancer kataegis},
+  title={{DNA} deaminases induce break-associated mutation showers with implication of {APOBEC3B} and {3A} in breast cancer kataegis},
   author={Taylor, Benjamin JM and Nik-Zainal, Serena and Wu, Yee Ling and Stebbings, Lucy A and Raine, Keiran and Campbell, Peter J and Rada, Cristina and Stratton, Michael R and Neuberger, Michael S},
   journal={Elife},
   volume={2},
