--- a/main.tex
+++ b/main.tex
@@ -24,10 +24,10 @@ This paper describes a mutation visualization tool developed this semester that 
 \end{abstract}
 
 \section{Introduction}
-Mutation Signature Explorer is a web-based (\url{https://mutation-signature-explorer.lrgr.io}) mutation data browser that enables exploration of mutational signatures, single-nucleotide variant (SNV) mutation types, and mutation density.
+Mutation Signature Explorer is a web-based (\url{https://mutation-signature-explorer.lrgr.io}) mutation data browser that enables exploration of mutational signatures, single-nucleotide variant (SNV) mutations, and mutation density.
 This tool allows users to choose sequencing project datasets by cancer type, as well as mutational signature combinations (of which can be selected based on cancer-type-specific presets) before plotting this data. 
 Web-based interactive visualizations allow for exploration across datasets and features in a way that is accessible and fast.
-Data exploration through these visualizations can be used to make initial inferences that lead to further statistical analysis, or, alternatively, can be used to strengthen and verify relationships found through prior analysis.
+Data exploration through these visualizations can be used to make initial inferences that lead to further statistical analysis, or, alternatively, can be used to verify and communicate relationships found through prior analysis.
 
 Each type of visualization produced by the Mutation Signature Explorer aims to enable further examination of a trend or relationship which has been hypothesized or presented in existing literature.
 The following are types of visualizations that can be generated and their motivations:
@@ -66,7 +66,7 @@ To our knowledge, this is a new method for exploring mutational signatures along
 \begin{figure}
     \caption{Screenshot}
     \centering
-    \frame{\includegraphics[width=0.8\columnwidth]{figures/screenshot1.png}}
+    \frame{\includegraphics[width=0.75\columnwidth]{figures/screenshot1.png}}
 \end{figure}
 
 
@@ -157,9 +157,9 @@ Local dataset visualization should be further enabled, to extend functionality b
     \includegraphics[width=\columnwidth]{figures/kataegis_chr2.pdf}
 \end{figure}
 \begin{figure}[h!]
-    \caption{Rainfall Plot (Chromosome 2)}
+    \caption{Rainfall Plot (Chromosome 6)}
     \centering
-    \includegraphics[width=\columnwidth]{figures/rainfall_DO35082_chr2.pdf}
+    \includegraphics[width=\columnwidth]{figures/rainfall_DO50346_chr6.pdf}
 \end{figure}
 \begin{figure}[h!]
     \caption{Manhattan Plot (Chromosome 2)}
